--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 
-/* @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 .work-sans-font {
     font-family: "Work Sans", sans-serif;
@@ -12,6 +12,9 @@
   /* shared style */
   .display-flex{
     display: flex;
+  }
+  .color{
+    color: #FF900E;
   }
   .dark2{
     color: #424242;
@@ -32,6 +35,14 @@
     border-radius: 8px;
   }
 
+  main{
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+  main > section{
+    margin-top: 130px;
+  }
   /* Navbar */
 
   .navbar{
@@ -69,12 +80,84 @@
   }
   .banner-img{
     width: 100%;
+    margin-bottom: 10px;
   }
+
+  /* team and feacture */
+  .teams{
+    align-items: center;
+  }
+  .team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+  }
+
+  .features{
+    margin-left: 130px;
+    max-width: 530px;
+  }
+
+  .feature-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+  }
+
+  #quick-list{
+    font-weight: 500;
+  }
+
+  /* Facts */
+
+  .fact-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+  }
+
+  .fact{
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    width: 240px;
+    height: 240px;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+  }
+  .fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+  }
+  .fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+  }
+  .fact-description{
+    max-width: 540px;
+    margin-top: 24px;
+    margin-bottom: 50px;
+  }
+
 
   /* responsive */
   @media screen and (max-width:576px) {
-    .navbar, .nav-links{
+    .navbar, .nav-links, .teams{
         flex-direction: column;
     }
-    
+    .team-img-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .features{
+        margin-left: 20px;
+    }
+  }
+  @media screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .features{
+        margin: 50px auto;
+    }
   }
